feat: add a title tag for the page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <title>Chattie</title>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@msgpack/msgpack/dist.es5+umd/msgpack.min.js"></script>
     </head>
 
